feat: enhance meeting management by adding notification service and edit functionality